GIT REPO: https://github.com/TheSpaceCoder/mySchool.git
DEVELOPMENT BRANCH: https://github.com/TheSpaceCoder/mySchool/wiki/Development-Branch
ROADMAP: https://github.com/TheSpaceCoder/mySchool/projects
SUPPORT: https://github.com/TheSpaceCoder/mySchool/issues
TWITTER: https://twitter.com/TheSpaceCoder


CURRENT VERSION
---------------------------------------------
ADDED: FAILSAFE SO EMPTY EVENTS ARE NOT MADE
ADDED: CLUB TIMES (BEFORE AND AFTER SCHOOL)

PUBLIC RELEASE V1.1
---------------------------------------------
ADDED: ANGULARJS CONTROLLERS
ADDED: ANGULAR TO HOMEWORK AND CLUB PAGE
ADDED: CLUBS PAGE FUNCTIONALITY
ADDED: CODE TO TELL IF YOU ARE IN THE DEV BRANCH

CHANGED: CLUBS PAGE
CHANGED: GRAMMAR
CHANGED: VIEWS.JS
CHANGED: SMALL OPTIMIZATIONS
CHANGED: INDEX.HTML HEAD
CHANGED: ABOUT PAGE

FIXED: DAY OFF BUG
FIXED: SMALL BUGS



PUBLIC RELEASE V1.0.8
---------------------------------------------
ADDED: HOMEWORK DESCRIPTION
ADDED: CLUBS PAGE (NOT WORKING YET)

REMOVED: SCHOOL PAGE

CHANGED: ABOUT PAGE

FIXED: GOOGLE API
FIXED: UPCOMING HOMEWORK BUG



PUBLIC RELEASE V1.0.3
---------------------------------------------
ADDED: FIRST DAY OF SCHOOL EVENT

CHANGED: CALENDAR

REMOVED: TEST.HTML

FIXED: BLUE GOLD BUGFIX



PUBLIC RELEASE V1.0
---------------------------------------------
ADDED: SHOW UPCOMING HOMEWORK
ADDED: SCHOOL PAGE
ADDED: ABOUT PAGE
ADDED: HOMEWORK FEATURE
ADDED: FINAL EXAMS EVENT

CHANGED: FRONT PAGE
CHANGED: CODE CLEANUP
CHANGED: STYLING

FIXED: KILLED BUGS



BETA V0.8.5
---------------------------------------------
ADDED: ANGULAR JS
ADDED: VIEWS
ADDED: HOMEWORK PAGE (NOT FUNCTIONAL)
ADDED: NEW STYLING
ADDED: NO SCHOOL EVENT

CHANGED: ANGULAR JS FOR PAGES
CHANGED: CODE CLEANUP
CHANGED: STYLING

FIXED: KILLED BUGS



ALPHA V0.7.5
---------------------------------------------
ADDED: STYLING
ADDED: NAV SIDEBAR
ADDED: FONTS

CHANGED: PAGE REDESIGN
CHANGED: CODE CHANGES

FIXED: API NOT RESPONDING
FIXED: LOGIN BUG
FIXED: OTHER SMALL ISSUES