@@ -5,18 +5,18 @@
 
 
     <div class="form-group">
-      <label class="formLabel" for="clubName">Club Name*:</label>
-      <input placeholder="Engineering Club..." type="text" class="form-control" ng-model="vm.clubName" id="clubName">
+      <label class="formLabel" for="clubName">Club Name <span style="color:#ff1a1a;">*</span></label>
+      <input placeholder="Engineering Club..." type="text" class="form-control" ng-model="vm.clubName" id="clubName" required>
     </div>
 
     <div class="form-group">
-      <label class="formLabel" for="clubDescription">Club Descrition:</label>
+      <label class="formLabel" for="clubDescription">Club Descrition</label>
       <input placeholder="We Do..." type="text" class="form-control" ng-model="vm.clubDescription" id="clubDescription">
     </div>
 
 
     <div class="form-group">
-      <label for="meetingTime">Meeting Time:</label>
+      <label for="meetingTime">Meeting Time</label>
       <select class="form-control dropdown" id="meetingTime">
         <option value="1">Before School</option>
         <option value="2">After School</option>
@@ -24,9 +24,11 @@
     </div>
 
     <div class="form-group">
-      <label class="formLabel" for="clubMeeting">Meeting:</label>
+      <label class="formLabel" for="clubMeeting">Meeting</label>
       <input type="date" class="form-control" id="clubMeeting">
     </div>
+
+    <p class="text-left required"><em><span style="color:red;">*</span> Required Field</em></p>
 
     <div class="forum-group">
       <button class="btn btn-default" id="addClub" ng-click="vm.addClub()">Add Club</button>
