@@ -5,25 +5,27 @@
 
 
     <div class="form-group">
-      <label class="formLabel" for="homeworkName">Assignment Name*:</label>
-      <input placeholder="Worksheet..." type="text" class="form-control" ng-model="vm.homeworkName" id="homeworkName">
+      <label class="formLabel" for="homeworkName">Assignment Name <span style="color:#ff1a1a;">*</span></label>
+      <input placeholder="Worksheet..." type="text" class="form-control" ng-model="vm.homeworkName" id="homeworkName" required>
     </div>
 
     <div class="form-group">
-      <label class="formLabel" for="className">Class*:</label>
-      <input placeholder="Math..." type="text" class="form-control" ng-model="vm.className" id="className">
+      <label class="formLabel" for="className">Class <span style="color:#ff1a1a;">*</span></label>
+      <input placeholder="Math..." type="text" class="form-control" ng-model="vm.className" id="className" required>
     </div>
     
     <div class="form-group">
-      <label class="formLabel" for="homeworkDescription">Homework Description:</label>
+      <label class="formLabel" for="homeworkDescription">Homework Description</label>
       <input placeholder="Questions..." type="text" class="form-control" ng-model="vm.homeworkDescription" id="homeworkDescription">
     </div>
     
 
     <div class="form-group">
-      <label class="formLabel" for="dueDate">Due Date:</label>
+      <label class="formLabel" for="dueDate">Due Date</label>
       <input type="date" class="form-control" id="dueDate">
     </div>
+
+    <p class="text-left required"><em><span style="color:red;">*</span> Required Field</em></p>
 
     <div class="forum-group">
       <button class="btn btn-default" id="addAssignment" ng-click="vm.addAssignment()">Add Assignment</button>
