@@ -14,6 +14,12 @@ CURRENT VERSION
 ---------------------------------------------
 ADDED: FAILSAFE SO EMPTY EVENTS ARE NOT MADE
 ADDED: CLUB TIMES (BEFORE AND AFTER SCHOOL)
+ADDED: REQUIRED FIELDS
+
+CHANGED: SMALL VISUAL CHANGES TO HOMEWORK AND CLUBS PAGE
+CHANGED: HOW EVENTS ARE ADDED
+
+FIXED: SMALL BUG WITH REQUIRED FIELDS
 
 PUBLIC RELEASE V1.1
 ---------------------------------------------
